# MagicBean

./: .gitignore  CMakeLists.txt  LICENSE  MagicBean.cpp  MagicBean.hpp  MagicBean.lua  Makefile  main.cpp
MagicBean/: MagicBean.cpp  MagicBean.h  Makefile
Samples/Java/: Java_MagicBean.cpp  Java_MagicBean_JNI.cpp  MagicBean.java  Makefile
Samples/Java/MagicBean/: JNI.java  Magic.java  Process.java  ProcessLibrary.java  ProcessMemory.java  Thread.java  Window.java
Samples/Lua/: Makefile  main.cpp  test.lua
